04/03/2024 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_ARCZonalShift_ZonalAutoshiftConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_ARCZonalShift_ZonalAutoshiftConfiguration.json
@@ -5,8 +5,7 @@
     "ZonalAutoshiftStatus": {
       "type": "string",
       "enum": [
-        "ENABLED",
-        "DISABLED"
+        "ENABLED"
       ]
     },
     "ControlCondition": {
