--- a/internal/service/cloudformation/schemas/AWS_AppSync_Resolver.json
+++ b/internal/service/cloudformation/schemas/AWS_AppSync_Resolver.json
@@ -166,7 +166,7 @@
     },
     "MetricsConfig": {
       "type": "string",
-      "description": "",
+      "description": "Enables or disables enhanced resolver metrics for specified resolvers. Note that ``MetricsConfig`` won't be used unless the ``resolverLevelMetricsBehavior`` value is set to ``PER_RESOLVER_METRICS``. If the ``resolverLevelMetricsBehavior`` is set to ``FULL_REQUEST_RESOLVER_METRICS`` instead, ``MetricsConfig`` will be ignored. However, you can still set its value.",
       "enum": [
         "ENABLED",
         "DISABLED"
