--- a/internal/service/cloudformation/schemas/AWS_CleanRooms_ConfiguredTable.json
+++ b/internal/service/cloudformation/schemas/AWS_CleanRooms_ConfiguredTable.json
@@ -101,7 +101,18 @@
         "LOWER",
         "RTRIM",
         "UPPER",
-        "COALESCE"
+        "COALESCE",
+        "CONVERT",
+        "CURRENT_DATE",
+        "DATEADD",
+        "EXTRACT",
+        "GETDATE",
+        "SUBSTRING",
+        "TO_CHAR",
+        "TO_DATE",
+        "TO_NUMBER",
+        "TO_TIMESTAMP",
+        "TRIM"
       ]
     },
     "AnalysisRuleAggregation": {
@@ -226,6 +237,35 @@
         "$ref": "#/definitions/AllowedAnalysisProvider"
       }
     },
+    "DifferentialPrivacyColumn": {
+      "type": "object",
+      "properties": {
+        "Name": {
+          "type": "string"
+        }
+      },
+      "required": [
+        "Name"
+      ],
+      "additionalProperties": false
+    },
+    "DifferentialPrivacy": {
+      "type": "object",
+      "properties": {
+        "Columns": {
+          "type": "array",
+          "insertionOrder": false,
+          "items": {
+            "$ref": "#/definitions/DifferentialPrivacyColumn"
+          },
+          "minItems": 1
+        }
+      },
+      "required": [
+        "Columns"
+      ],
+      "additionalProperties": false
+    },
     "AnalysisRuleCustom": {
       "type": "object",
       "properties": {
@@ -234,6 +274,9 @@
         },
         "AllowedAnalysisProviders": {
           "$ref": "#/definitions/AllowedAnalysisProviders"
+        },
+        "DifferentialPrivacy": {
+          "$ref": "#/definitions/DifferentialPrivacy"
         }
       },
       "required": [
