--- a/internal/service/cloudformation/schemas/AWS_Config_ConformancePack.json
+++ b/internal/service/cloudformation/schemas/AWS_Config_ConformancePack.json
@@ -34,6 +34,13 @@
       ]
     }
   },
+  "tagging": {
+    "taggable": false,
+    "tagOnCreate": false,
+    "tagUpdatable": false,
+    "cloudFormationSystemTags": false,
+    "tagProperty": "/properties/Tags"
+  },
   "properties": {
     "ConformancePackName": {
       "description": "Name of the conformance pack which will be assigned as the unique identifier.",
