--- a/internal/service/cloudformation/schemas/AWS_ECR_ReplicationConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_ECR_ReplicationConfiguration.json
@@ -125,6 +125,9 @@
   "readOnlyProperties": [
     "/properties/RegistryId"
   ],
+  "tagging": {
+    "taggable": false
+  },
   "additionalProperties": false,
   "handlers": {
     "create": {
