--- a/internal/service/cloudformation/schemas/AWS_EMR_StudioSessionMapping.json
+++ b/internal/service/cloudformation/schemas/AWS_EMR_StudioSessionMapping.json
@@ -59,6 +59,7 @@
         "sso-directory:SearchGroups",
         "sso-directory:DescribeUser",
         "sso-directory:DescribeGroup",
+        "sso:GetManagedApplicationInstance",
         "sso:ListDirectoryAssociations",
         "sso:GetProfile",
         "sso:ListProfiles",
