--- a/internal/service/cloudformation/schemas/AWS_SageMaker_AppImageConfig.json
+++ b/internal/service/cloudformation/schemas/AWS_SageMaker_AppImageConfig.json
@@ -25,6 +25,10 @@
       "$ref": "#/definitions/JupyterLabAppImageConfig",
       "description": "The JupyterLabAppImageConfig."
     },
+    "CodeEditorAppImageConfig": {
+      "$ref": "#/definitions/CodeEditorAppImageConfig",
+      "description": "The CodeEditorAppImageConfig."
+    },
     "Tags": {
       "type": "array",
       "description": "A list of tags to apply to the AppImageConfig.",
@@ -63,6 +67,17 @@
     "JupyterLabAppImageConfig": {
       "type": "object",
       "description": "The configuration for the kernels in a SageMaker image running as a JupyterLab app.",
+      "additionalProperties": false,
+      "properties": {
+        "ContainerConfig": {
+          "$ref": "#/definitions/ContainerConfig",
+          "description": "The container configuration for a SageMaker image."
+        }
+      }
+    },
+    "CodeEditorAppImageConfig": {
+      "type": "object",
+      "description": "The configuration for the kernels in a SageMaker image running as a CodeEditor app.",
       "additionalProperties": false,
       "properties": {
         "ContainerConfig": {
