--- a/internal/service/cloudformation/schemas/AWS_CodeStarConnections_SyncConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_CodeStarConnections_SyncConfiguration.json
@@ -22,7 +22,13 @@
     "ProviderType": {
       "description": "The name of the external provider where your third-party code repository is configured.",
       "type": "string",
-      "pattern": "^(GitHub|Bitbucket|GitHubEnterprise|GitLab)$"
+      "enum": [
+        "GitHub",
+        "Bitbucket",
+        "GitHubEnterprise",
+        "GitLab",
+        "GitLabSelfManaged"
+      ]
     },
     "Branch": {
       "description": "The name of the branch of the repository from which resources are to be synchronized,",
@@ -39,6 +45,22 @@
     "RoleArn": {
       "description": "The IAM Role that allows AWS to update CloudFormation stacks based on content in the specified repository.",
       "type": "string"
+    },
+    "PublishDeploymentStatus": {
+      "description": "Whether to enable or disable publishing of deployment status to source providers.",
+      "type": "string",
+      "enum": [
+        "ENABLED",
+        "DISABLED"
+      ]
+    },
+    "TriggerResourceUpdateOn": {
+      "description": "When to trigger Git sync to begin the stack update.",
+      "type": "string",
+      "enum": [
+        "ANY_CHANGE",
+        "FILE_CHANGE"
+      ]
     },
     "RepositoryLinkId": {
       "description": "A UUID that uniquely identifies the RepositoryLink that the SyncConfig is associated with.",
