--- a/internal/service/cloudformation/schemas/AWS_Config_OrganizationConformancePack.json
+++ b/internal/service/cloudformation/schemas/AWS_Config_OrganizationConformancePack.json
@@ -86,6 +86,13 @@
       "maxItems": 1000
     }
   },
+  "tagging": {
+    "taggable": false,
+    "tagOnCreate": false,
+    "tagUpdatable": false,
+    "cloudFormationSystemTags": false,
+    "tagProperty": "/properties/Tags"
+  },
   "required": [
     "OrganizationConformancePackName"
   ],
