--- a/internal/service/cloudformation/schemas/AWS_NetworkFirewall_TLSInspectionConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_NetworkFirewall_TLSInspectionConfiguration.json
@@ -251,6 +251,7 @@
   "handlers": {
     "create": {
       "permissions": [
+        "iam:CreateServiceLinkedRole",
         "network-firewall:CreateTLSInspectionConfiguration",
         "network-firewall:DescribeTLSInspectionConfiguration",
         "network-firewall:TagResource"
