--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,8 +3,8 @@
 
 archives:
   - files:
-      # Ensure only built binary is archived
-      - 'none*'
+      # Ensure only built binary and license file are archived
+      - 'LICENSE'
     format: zip
     name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}'
 before:
