--- a/internal/service/cloudformation/schemas/AWS_GroundStation_Config.json
+++ b/internal/service/cloudformation/schemas/AWS_GroundStation_Config.json
@@ -107,10 +107,12 @@
       "pattern": "^([a-zA-Z0-9_\\-=/]|\\{satellite_id\\}|\\{config\\-name}|\\{s3\\-config-id}|\\{year\\}|\\{month\\}|\\{day\\}){1,900}$"
     },
     "BucketArn": {
-      "type": "string"
+      "type": "string",
+      "pattern": "^arn:aws[A-Za-z0-9-]{0,64}:s3:::[A-Za-z0-9-]{1,64}$"
     },
     "RoleArn": {
-      "type": "string"
+      "type": "string",
+      "pattern": "^arn:[^:\\n]+:iam::[^:\\n]+:role\\/.+$"
     },
     "UplinkSpectrumConfig": {
       "type": "object",
@@ -229,7 +231,8 @@
           "type": "boolean"
         },
         "AntennaUplinkConfigArn": {
-          "type": "string"
+          "type": "string",
+          "pattern": "^(arn:(aws[a-zA-Z-]*)?:[a-z0-9-.]+:.*)|()$"
         }
       },
       "additionalProperties": false
@@ -282,7 +285,8 @@
       "$ref": "#/definitions/ConfigData"
     },
     "Arn": {
-      "type": "string"
+      "type": "string",
+      "pattern": "^(arn:(aws[a-zA-Z-]*)?:[a-z0-9-.]+:.*)|()$"
     },
     "Id": {
       "type": "string"
