--- a/internal/service/cloudformation/schemas/AWS_ARCZonalShift_ZonalAutoshiftConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_ARCZonalShift_ZonalAutoshiftConfiguration.json
@@ -87,12 +87,7 @@
   },
   "properties": {
     "ZonalAutoshiftStatus": {
-      "$ref": "#/definitions/ZonalAutoshiftStatus",
-      "dependencies": {
-        "ZonalAutoshiftStatus": [
-          "PracticeRunConfiguration"
-        ]
-      }
+      "$ref": "#/definitions/ZonalAutoshiftStatus"
     },
     "PracticeRunConfiguration": {
       "$ref": "#/definitions/PracticeRunConfiguration"
@@ -148,6 +143,29 @@
   "additionalProperties": false,
   "tagging": {
     "taggable": false
-  }
+  },
+  "allOf": [
+    {
+      "anyOf": [
+        {
+          "required": [
+            "ZonalAutoshiftStatus"
+          ]
+        },
+        {
+          "required": [
+            "PracticeRunConfiguration"
+          ]
+        }
+      ],
+      "allOf": [
+        {
+          "required": [
+            "ResourceIdentifier"
+          ]
+        }
+      ]
+    }
+  ]
 }
 
