--- a/internal/service/cloudformation/schemas/AWS_RUM_AppMonitor.json
+++ b/internal/service/cloudformation/schemas/AWS_RUM_AppMonitor.json
@@ -307,9 +307,13 @@
     "Name",
     "Domain"
   ],
+  "tagging": {
+    "taggable": true
+  },
   "handlers": {
     "create": {
       "permissions": [
+        "rum:GetAppMonitor",
         "rum:CreateAppMonitor",
         "dynamodb:GetItem",
         "dynamodb:PutItem",
@@ -326,11 +330,15 @@
         "logs:DescribeLogGroups",
         "logs:PutRetentionPolicy",
         "rum:TagResource",
+        "rum:ListTagsForResource",
         "cognito-identity:DescribeIdentityPool",
         "iam:GetRole",
         "iam:CreateServiceLinkedRole",
+        "iam:PassRole",
         "rum:PutRumMetricsDestination",
-        "rum:BatchCreateRumMetricDefinitions"
+        "rum:BatchCreateRumMetricDefinitions",
+        "rum:ListRumMetricsDestinations",
+        "rum:BatchGetRumMetricDefinitions"
       ]
     },
     "read": {
@@ -347,6 +355,7 @@
     },
     "update": {
       "permissions": [
+        "rum:GetAppMonitor",
         "rum:UpdateAppMonitor",
         "dynamodb:GetItem",
         "dynamodb:PutItem",
@@ -369,6 +378,7 @@
         "rum:ListTagsForResource",
         "iam:GetRole",
         "iam:CreateServiceLinkedRole",
+        "iam:PassRole",
         "rum:PutRumMetricsDestination",
         "rum:DeleteRumMetricsDestination",
         "rum:ListRumMetricsDestinations",
@@ -380,6 +390,7 @@
     },
     "delete": {
       "permissions": [
+        "rum:GetAppMonitor",
         "rum:DeleteAppMonitor",
         "dynamodb:DeleteItem",
         "dynamodb:Query",
@@ -387,8 +398,11 @@
         "s3:DeleteObject",
         "s3:DoesObjectExist",
         "rum:UntagResource",
+        "rum:ListTagsForResource",
         "rum:DeleteRumMetricsDestination",
-        "rum:BatchDeleteRumMetricDefinitions"
+        "rum:BatchDeleteRumMetricDefinitions",
+        "rum:ListRumMetricsDestinations",
+        "rum:BatchGetRumMetricDefinitions"
       ]
     },
     "list": {
@@ -406,6 +420,5 @@
         "rum:ListTagsForResource"
       ]
     }
-  },
-  "taggable": true
+  }
 }
