--- a/.golangci.yml
+++ b/.golangci.yml
@@ -13,11 +13,12 @@ linters:
     - exportloopref
     - gocritic
     - gofmt
-    - gomnd
     - gosimple
+    - govet
     - ineffassign
     - makezero
     - misspell
+    - mnd
     - nakedret
     - nilerr
     - nolintlint
@@ -27,8 +28,6 @@ linters:
     - unconvert
     - unparam
     - unused
-    - vet
-    - vetshadow
     - whitespace
 
 linters-settings:
@@ -45,20 +44,18 @@ linters-settings:
       - performance
       - experimental
       - opinionated
-  gomnd:
-    settings:
-      mnd:
-        checks:
-          - argument
-          - assign
-          - case
-          # - condition
-          - operation
-          - return
-        ignored-functions:
-          - os.Exit
-          - stringvalidator.LengthAtMost
-          - stringvalidator.LengthBetween
+  mnd:
+    checks:
+      - argument
+      - assign
+      - case
+      # - condition
+      - operation
+      - return
+    ignored-functions:
+      - os.Exit
+      - stringvalidator.LengthAtMost
+      - stringvalidator.LengthBetween
   nolintlint:
     allow-unused: false
   stylecheck:
